# mlops_zoomcamp

./: pyproject.toml
01-intro/: homework.ipynb
02-experiment-tracking/: homework.ipynb  mlflow.db
02-experiment-tracking/data/: green_tripdata_2023-01.parquet  green_tripdata_2023-02.parquet  green_tripdata_2023-03.parquet
02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
02-experiment-tracking/mlruns/1/79959f036ab6411e87f854901088f6ae/artifacts/model/: MLmodel  python_env.yaml
02-experiment-tracking/mlruns/3/3585cdb2d8f04e9bb4bce1c9c9a2b677/artifacts/model/: MLmodel
02-experiment-tracking/mlruns/3/50f07a9472b241849e25223f348f724d/artifacts/model/metadata/: MLmodel
02-experiment-tracking/mlruns/3/bb9cf6dc6ae244de8aae28aa50aa22cf/artifacts/model/: MLmodel  conda.yaml
02-experiment-tracking/mlruns/3/ca42a1c1e48a4b55af928b5d9cc5da62/artifacts/model/metadata/: MLmodel
02-experiment-tracking/mlruns/3/f1e992cf744543ebb6b9e686ac9985e9/artifacts/model/metadata/: MLmodel
03-orchestration/: homework.ipynb
